styling edit comment + replace email with name

--- a/app/views/secrets/show.html.erb
+++ b/app/views/secrets/show.html.erb
@@ -38,7 +38,7 @@
             <%= link_to image_tag("/assets/empty-profile-picture.png", class: "comment-profile"), edit_user_registration_path %>
           <% end %>
           <div class="comment-user-details">
-            <p class="comment-user"><strong><%= comment.user.email %></strong></p>
+            <p class="comment-user"><strong><%= comment.user.username %></strong></p>
             <p class="comment-timestamp"><em>Posted on <%= comment.created_at.strftime('%B %d, %Y at %I:%M %p') %></em></p>
           </div>
         </div>
