--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -3,13 +3,18 @@
 <div id="<%= dom_id secret %>" class="secret-container">
 
   <div class="user-details">
-    <!--<strong><%= t('global.user') %></strong>-->
-    <% @user = User.find(secret.user_id) %>
-    <%= link_to image_tag(@user.profile_picture),user_path(@user.id), method: :get,class:"user_profpic_in_secret user_profpic"%> 
-    <%= @user.email %>
-    
-    
-  </div>
+  <!--<strong><%= t('global.user') %></strong>-->
+  <% @user = User.find(secret.user_id) %>
+
+  <% if @user.profile_picture.attached? %>
+    <%= link_to image_tag(@user.profile_picture), user_path(@user.id), method: :get, class: "user_profpic_in_secret user_profpic" %>
+  <% else %>
+    <%= link_to image_tag("empty-profile-picture.png"), user_path(@user.id), method: :get, class: "user_profpic_in_secret user_profpic" %>
+  <% end %>
+
+  <%= @user.username %>
+</div>
+
 
 
   <h1><%= secret.name %></h1>
