--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,6 +20,16 @@
     <div class = "properties">
       <div class="field">
         <div class="interactive">
+          <%= f.label :"Username:" %>
+          <% if @account_params then %>
+            <%= f.text_field :username, autofocus: true, value: @account_params[:username] %>
+          <%else%>
+            <%= f.text_field :username, autofocus: true, value: @user.username %>
+          <%end%>  
+        </div>
+      </div>
+      <div class="field">
+        <div class="interactive">
           <%= f.label :"email:" %>
           <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
         </div>
@@ -64,7 +74,9 @@
       </div>
           <div id ="prof_pic">
         <label for="user_profile_picture">
-          <% if current_user.profile_picture.attached? %>
+          <% if @account_params then %>
+            <%= image_tag(@account_params[:profile_picture], id:"editProfPicImg") %>
+          <% elsif current_user.profile_picture.attached? %>
             <%= image_tag(current_user.profile_picture, id:"editProfPicImg") %>
           <% else %>
             <%= image_tag("/assets/empty-profile-picture.png", id:"editProfPicImg") %>
