--- a/app/assets/stylesheets/secret_homepage.css
+++ b/app/assets/stylesheets/secret_homepage.css
@@ -5,13 +5,7 @@
     justify-content: center;
   }
   
-  .secret-item {
-    width: 280px;
-    border: 1px solid #DDD;
-    background-color: #FFF;
-    margin-bottom: 20px;
-    transition: transform 0.3s ease;
-  }
+  
   
   .secret-item:hover {
     transform: translateY(-5px);
@@ -41,14 +35,20 @@
     flex-wrap: wrap;
     padding: 20px;
   }
+  .secretlabel{
+    padding: 20px;
+    width: inherit;
+  }
   .secretlabel:hover{
     cursor: pointer;
   }
+
   .secret-item {
+    width: 280px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 8px;
-    padding: 20px;
+    margin-bottom: 20px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
@@ -106,7 +106,10 @@
     color: #666;
   }
   h2 > form > button{
-    display: none;
+    border-style: none;
+  }
+  h2 > .button_to{
+    height: 0px;
   }
  
 
