--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -14,7 +14,7 @@
       <div class="secret-item">
         <label for="secretitem" class="secretlabel">
        
-        <h2 class="secret-title"><%= button_to "", secret_path(secret),id:"secretitem",method: :get %><%=secret.name%></h2>
+        <h2 class="secret-title"><%= button_to "", secret_path(secret.id),id:"secretitem",method: :get %><%=secret.name%></h2>
 
         <% if secret.image.attached? %>
           <div class="secret-image">
@@ -31,7 +31,7 @@
         <% end %>
 
         <div class="secret-meta">
-          <p>Created by: <strong><%= secret.user.email if secret.user.present? %></strong></p>
+          <p>Created by: <strong><%= secret.user.username if secret.user.present? %></strong></p>
           <p>Created on: <%= secret.created_at.strftime('%B %d, %Y') %></p>
         </div>
         </label>
