--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "sessions_form" %>
+<!--test <%= stylesheet_link_tag "sessions_form" %> -->
 <%= render "devise/shared/logoText"%>
 <div class="logInForm"> 
 <h2>Forgot your password?</h2>
