--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,5 @@
 
-<%= stylesheet_link_tag "UserProfileEdit" %>
+<!--test <%= stylesheet_link_tag "UserProfileEdit" %> -->
 <script >
   function checkpassword(){
     const valid = document.getElementById('passwordfield').value.length > 0
