--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag "Errors" %>
+<!--test <%= stylesheet_link_tag "Errors" %> -->
 <% if resource.errors.any? %>
   <div id="error_explanation" data-turbo-cache="false">
     <h2>
