--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<p><%= t('.greeting', recipient: @resource.email) %></p>
+<<!-- anders p><%= t('.greeting', recipient: @resource.email) %></p> -->
 
 <p><%= t('.message') %></p>
 
