--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p><%= t('.greeting', recipient: @resource.email) %></p>
+<!-- anders <p><%= t('.greeting', recipient: @resource.email) %></p> -->
 
 <p><%= t('.message') %></p>
