--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,4 +1,4 @@
-<%- if controller_name != 'sessions' %>
+<!-- anders <%- if controller_name != 'sessions' %> -->
   <%= link_to t(".sign_in"), new_session_path(resource_name) %><br />
 <% end %>
 
