--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -17,7 +17,7 @@
     <% end %>
   </div>
 
-  <div class="edit-comment-back-link">
+  <div class="edit-comment-a">
     <%= link_to 'Back to Secret', @secret, class: 'edit-comment-back-to-secret-link' %>
   </div>
 </div>
