--- a/app/assets/stylesheets/secret_homepage.css
+++ b/app/assets/stylesheets/secret_homepage.css
@@ -31,7 +31,7 @@
 
   .secrets-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     flex-wrap: wrap;
     padding: 20px;
   }
@@ -44,6 +44,7 @@
   }
 
   .secret-item {
+    margin-left: 5%;
     width: 280px;
     background-color: #fff;
     border: 1px solid #ddd;
