undoing my dumbdumb

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,4 @@
-
-<!--test <%= stylesheet_link_tag "UserProfileEdit" %> -->
+<%= stylesheet_link_tag "UserProfileEdit" %>
 <script >
   function checkpassword(){
     const valid = document.getElementById('passwordfield').value.length > 0
