--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,4 @@
-
-<!--test <div id="ifNotLoginOptions"> -->
+<div id="ifNotLoginOptions">
 <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name), class:"loginOptionsButton"%><br />
 <% end %>
