--- a/app/views/devise/shared/_logoText.html.erb
+++ b/app/views/devise/shared/_logoText.html.erb
@@ -1,5 +1,4 @@
-
-<!--test <div id="LoginImg"> -->
+<div id="LoginImg">
   <%= image_tag("Login_Img.png", :alt => "Login Image" ) %>
 </div>
 <div id = "TitleText">
