--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -12,9 +12,9 @@
   <% if @secrets.any? %>
     <% @secrets.each do |secret| %>
       <div class="secret-item">
-        <label for="secretitem" class="secretlabel">
-       
-        <h2 class="secret-title"><%= button_to "", secret_path(secret.id),id:"secretitem",method: :get %><%=secret.name%></h2>
+        <label for="secretitem_" class="secretlabel">
+         
+        <h2 class="secret-title"><%= button_to "", secret_path(secret.id),id:"secretitem_#{secret.id}",method: :get %><%=secret.name%></h2>
 
         <% if secret.image.attached? %>
           <div class="secret-image">
@@ -41,4 +41,19 @@
     <p class="no-secrets" style="text-align: center;">No secrets available yet. Be the first to add one!</p>
   <% end %>
 </div>
-
+<script>
+  var vals = document.getElementsByTagName("label")
+  var ids = document.getElementsByTagName("button")
+  function yes(obj){
+    return obj.id.slice(0,11) === "secretitem_"
+  }
+  function set(curr,idx){
+    curr.htmlFor = "secretitem_"+ids[idx].id.slice(11,13)
+  }
+  ids = Array.from(ids)
+  vals = Array.from(vals)
+  ids = ids.filter(yes)
+  vals.forEach(set)
+  console.log(vals)
+  console.log(ids)
+</script>
