--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -16,7 +16,7 @@
 
         <!-- Followers list -->
         <li class="nav-item">
-          <%= link_to t('global.volgers'), root_path , class:"nav-link active" %>
+          <%= link_to t('global.followers'), root_path , class:"nav-link active" %>
         </li>
 
         <!-- Choose language -->
