--- a/app/views/secrets/index.html.erb
+++ b/app/views/secrets/index.html.erb
@@ -5,7 +5,9 @@
 <h1 class="page-header" style="text-align: center; margin-top: 20px;"><%= t('global.secrets')%></h1>
 
 <div class="action-bar" style="text-align: center; margin-bottom: 20px;">
-  <%= link_to t('secrets.new-link'), new_secret_path, class: 'btn-action new-link' %>
+  <% if user_signed_in?%>
+    <%= link_to t('secrets.new-link'), new_secret_path, class: 'btn-action new-link' %>
+  <%end%>
 </div>
 
 <div class="secrets-container">
