--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -15,9 +15,9 @@
         </li>
 
         <!-- Followers list -->
-        <li class="nav-item">
+        <!--<li class="nav-item">
           <%= link_to t('global.followers'), root_path , class:"nav-link active" %>
-        </li>
+        </li>-->
 
         <!-- Choose language -->
         <li class="nav-item dropdown">
