--- a/app/views/secrets/_secret.html.erb
+++ b/app/views/secrets/_secret.html.erb
@@ -30,10 +30,10 @@
 
   <div class="body">
     <strong><%= t('global.description') %></strong><br>
-    <%= secret.body %>
+    <%= secret.description %>
   </div>
 
-  <% if secret.secret_tags.any? %>
+  <!--<% if secret.secret_tags.any? %>
     <div class="tags-section">
       <strong><%= t('.tags') %></strong>
       <div class="tags-list">
@@ -46,6 +46,6 @@
     </div>
   <% else %>
     <p class="no-tags"><%= t('.no-tags') %></p>
-  <% end %>
+  <% end %>-->
 
 </div>
